  explaining how to see the complete help, i.e. ``bzr help xxx``.
  (Ian Clatworthy)

* Content filters can now be used to provide custom conversion
  between the canonical format of content (i.e. as stored) and
  the convenience format of content (i.e. as created in working
  trees). See ``bzr help content-filters`` for further details.
  (Ian Clatworthy, Alexander Belchenko)

Improvements
************

* A new format name alias ``default-rich-root`` has been added and
  points at the closest relative of the default format that supports 
  rich roots. (Jelmer Vernooij, #338061)

* Branching from a stacked branch using ``bzr*://`` will now stream
  the data when the target repository does not need topological
  ordering, reducing round trips and network overhead. This uses the
  existing smart server methods added in 1.13, so will work on any
  1.13 or newer server. (Robert Collins, Andrew Bennetts)

* ``bzr cat`` and ``bzr export`` now supports a ``--filters`` option
  that displays/saves the content after content filters are applied.
  (Ian Clatworthy)

* ``bzr ignore`` gives a more informative message when existing
  version controlled files match the ignore pattern. (Neil
  Martinsen-Burrell, #248895)

* ``bzr send`` is faster on repositories with deep histories.
  (Ian Clatworthy)

* Progress bars now show the rate of network activity for
  ``bzr+ssh://`` and ``bzr://`` connections.  (Andrew Bennetts)

* Pushing to a stacked pack-format branch on a 1.12 or older smart server
  now takes many less round trips.  (Andrew Bennetts, Robert Collins,
  #294479)
  
* Streaming push can be done to older repository formats.  This is
  implemented using a new ``Repository.insert_stream_locked`` RPC.
  (Andrew Bennetts, Robert Collins)

* Tildes are no longer escaped. No more %7Euser/project/branch!
  (Jonathan Lange)

Bug Fixes
*********

* Authentication plugins now receive all the parameters from the request